poi.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: poi-dep
spec:
  selector:
    matchLabels:
      app: poi
  replicas: 1
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: [edithere]/poi:1.0
        ports:
        - containerPort: 80
