trips.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: trips-dep
spec:
  selector:
    matchLabels:
      app: trips
  replicas: 1
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: [edithere]/trips:1.0
        ports:
        - containerPort: 80
