tripviewer.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: tripviewer-dep
spec:
  selector:
    matchLabels:
      app: tripviewer
  replicas: 1
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: [edithere]/tripviewer:1.0
        ports:
        - containerPort: 80
