tripviewer2-win.yaml

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: tripviewer2-win-dep
spec:
  selector:
    matchLabels:
      app: tripviewer2-win-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: tripviewer2-win-dep
    spec:
      containers:
      - name: tripviewer2-win
        image: [edithere]/tripviewer2:1.0
        ports:
        - containerPort: 80
      nodeSelector:
        agentpool: nodepool1
