userjava-csi.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: user-java-dep
spec:
  selector:
    matchLabels:
      app: user-java
  replicas: 1
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: [edithere]/user-java:1.0
        volumeMounts:
        - name: secrets-store
          mountPath: "/secrets"
          readOnly: true       
        ports:
        - containerPort: 80
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "kv"
            nodePublishSecretRef:
              name: secrets-store-creds
      nodeSelector:
        agentpool: nodepool1
