userjava.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: user-java-dep
spec:
  selector:
    matchLabels:
      app: user-java
  replicas: 1
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: [edithere]/user-java:1.0
        ports:
        - containerPort: 80
