userprofile.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: userprofile-dep
spec:
  selector:
    matchLabels:
      app: userprofile
  replicas: 1
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: [edithere]/userprofile:1.0
        ports:
        - containerPort: 80
