winservice.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wcf-dep
spec:
  selector:
    matchLabels:
      app: wcf
  replicas: 1
  template:
    metadata:
      labels:
        app: wcf
    spec:
      containers:
      - name: wcf
        image: [edithere]/wcfservice:1.0
        ports:
        - containerPort: 80
      nodeSelector:
        agentpool: win
