ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer-ext
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: userprofile-svc
          servicePort: 80
        path: /api/user/(.*)
      - backend:
          serviceName: trips-svc
          servicePort: 80
        path: /api/trips/(.*)
      - backend:
          serviceName: userjava-svc
          servicePort: 80
        path: /api/user-java/(.*)
      - backend:
          serviceName: poi-svc
          servicePort: 80
        path: /api/poi/(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer-ext 
          servicePort: 80
        path: /static(/|$)(.*)
